# sopho

.cursor/rules/: react-rules.mdc  rust-rules.mdc
.github/ISSUE_TEMPLATE/: bug_report.md  (+1 more)
backend/: Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.override.yaml  docker-compose.yaml
backend/data/: database.db
backend/src/: main.rs
backend/src/authentication/: constants.rs  controller.rs  dto.rs  repository.rs  service.rs
backend/src/cell/: constants.rs  controller.rs  dto.rs  mod.rs  repository.rs  service.rs
backend/src/common/: database_utils.rs  errors.rs  mod.rs  state.rs
backend/src/connection/: constants.rs  controller.rs  dto.rs  mod.rs  repository.rs  service.rs
backend/src/dashboard/: constants.rs  controller.rs  dto.rs  mod.rs  repository.rs  service.rs
backend/src/db/: mod.rs
backend/src/entity/: cell.rs  connection.rs  dashboard.rs  dashboard_chart_mapping.rs  mod.rs  notebook.rs  prelude.rs  session.rs  user.rs
backend/src/migrator/: m20250315_000001_create_dashboard_table.rs  m20250320_000001_create_connection_table.rs  m20250320_000002_create_chart_table.rs  m20250320_000003_create_dashboard_chart_mapping_table.rs  m20250320_000005_create_user_table.rs  m20250404_000001_create_session_table.rs  m20250504_000001_create_notebook_table.rs  m20250510_000001_create_cell_table.rs  mod.rs
backend/src/monitor/: controller.rs  mod.rs
backend/src/notebook/: constants.rs  controller.rs  dto.rs  mod.rs  repository.rs  service.rs
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json
(+140 files in other folders)
