[package]
name = "metron"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = { version = "0.8.1", features = ["json"] }
tokio = { version = "1.44.2", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs", "cors", "trace"] }
tower-cookies = "0.11.0"
http = "1.3.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
http-body-util = "0.1.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.140"
rig-core = "0.10.0"
sea-orm = { version = "1.1.7", features = [ "sqlx-mysql", "sqlx-sqlite", "sqlx-postgres", "runtime-async-std-native-tls", "macros", "debug-print"] }
sea-orm-migration = { version = "1.1.7" }
dotenv = "0.15"
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = "0.12.15"
anyhow = "1.0.97"
getrandom = "0.3.2"
base64 = "0.22.1"
time = "0.3.41"
sqlx = { version = "0.8", features = [ "runtime-tokio" ] }
thiserror = "=2.0.12"
